# ia_senac_uc14_frame_generation_project

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
notebooks/: emotion_classification_pipeline.ipynb  senac_hf_lstm_example.ipynb  senac_hf_lstm_example_with_model_pre_training.ipynb  senac_hf_lstm_example_with_model_pre_training_with_validation.ipynb  senac_hf_rnn_example.ipynb  video_interpolation_pipeline.ipynb
notebooks/uc14/: senac_hf_uc14_emotion_challenge_manual_models.ipynb  senac_hf_uc14_emotion_challenge_prosusAI_finbert.ipynb
notebooks/uc14/deprecated_notebooks/: senac_hf_lstm_example.ipynb  senac_hf_lstm_example_with_model_pre_training.ipynb  senac_hf_lstm_example_with_model_pre_training_with_validation.ipynb  senac_uc14_intel_fine_tuning.ipynb
src/: __init__.py  api.py  device_utils.py  interpolator.py  pipeline.py  video_processor.py
